[build-system]
requires = ["setuptools>=80.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "micasense"
description = "Micasense Image Processing"
dynamic = ["version"]
authors = [
    { name = "Florian Maurer", email = "maurer@fh-aachen.de" },
    { name = "MicaSense, Inc.", email = "github@micasense.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests",
    "numpy",
    "opencv-python",
    "gdal",
    "pysolar",
    "matplotlib",
    "scikit-image",
    "packaging",
    "pyexiftool",
    "pytz",
    "pyzbar"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["micasense"]
exclude = ["data*", "tests*"]

[tool.setuptools.dynamic]
version = { attr = "micasense.__version__" }

[project.urls]
Homepage = "https://github.com/brainergylab/micasense_imageprocessing"

