[build-system]
requires = ["setuptools>=80.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "micasense_imageprocessing"
description = "Micasense Image Processing - Third Party Project"
dynamic = ["version"]
authors = [
    { name = "Florian Maurer", email = "maurer@fh-aachen.de" },
    { name = "MicaSense, Inc.", email = "github@micasense.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "numpy",
    "opencv-python",
    "rawpy",
    "gdal",
    "pysolar",
    "matplotlib",
    "scikit-image",
    "packaging",
    "pyexiftool",
    "pytz",
    "pyzbar"
]

classifiers=[
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/brainergylab/micasense_imageprocessing"

[project.optional-dependencies]
test = [
  "pytest>=9",
  "pytest-cov>=6",
]
docs = [
  "jupyter",
  "nbconvert",
  "pandas",
  "ipywidgets",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["micasense"]
exclude = ["data*", "tests*"]

[tool.setuptools_scm]

[tool.pytest]
testpaths = ["tests"]
markers = [
    "newgdal: tests that require newer GDAL stack behavior",
]
addopts = [
    "--cov=micasense",
    "--cov-report=xml",
    "--cov-report=term-missing",
]

[tool.coverage.run]
source = ["micasense"]

[tool.coverage.report]
show_missing = true
skip_covered = true
